--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,9 @@
     ],
     "require": {
         "php": "^8.1",
+        "illuminate/contracts": "^9.0",
         "spatie/laravel-package-tools": "^1.13.0",
-        "illuminate/contracts": "^9.0"
+        "staudenmeir/laravel-adjacency-list": "^1.12"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
